# NESpp

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  main.cpp  myApp.cpp  myApp.h
app/bbNESqt/: CMakeLists.txt  main.cpp  main.qml
lib/: CMakeLists.txt
lib/include/NESpp/: Debugger.h  Emulator.h  NES.h
lib/src/: BitMappedRegister.h  CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Debugger.cpp  Emulator.cpp  EmulatorCore.h  MainBus.cpp  MainBus.h  NES.cpp  NES.h
lib/src/mappers/: Mapper.cpp  Mapper.h  NROM.cpp  NROM.h
lib/tests/: CMakeLists.txt  test_CPU.cpp
src/: BitMappedRegister.h  CMakeLists.txt  CPU.cpp  CPU.h  MainBus.cpp  MainBus.h  NES.cpp  NES.h  main.cpp
tests/: CMakeLists.txt  test_CPU.cpp
